k8s/istio-system/gateway-load-balancer-healthchecks.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: health
spec:
  selector:
    istio: ingressgateway
    service.istio.io/canonical-name: istio-ingressgateway-nodeport
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      credentialName: affable-www
