k8s/istio-system/load-balancer-affable.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: affable
  name: load-balancer-affable
spec:
  tls:
  - secretName: affable-www
  - secretName: tls-site5xzn
  defaultBackend:
    service:
      name: istio-ingressgateway-nodeport
      port:
        number: 80
